Implemented start script for watching src files

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hello World</title>
+  <title>ITS - Interstellar Trading Simulation</title>
 </head>
   <script src="js/pixi.min.js"></script>
 <body>
@@ -14,5 +14,6 @@
 
     PIXI.utils.sayHello(type)
   </script>
+  <script src="js/game.js"></script>
 </body>
 </html>
