--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ITS - Interstellar Trading Simulation</title>
+  <style>* {padding: 0; margin: 0}</style>
 </head>
   <script src="js/pixi.min.js"></script>
 <body>
